[BACKLOG-35358] Update startup scripts and dependencies for Java 11.